[metadata]
name = aircrackgui_by_kriod
version = 1.0
author = UnknownKriodluk
author_email = vitalka19203@gmail.com
description = GUI для aircrack-ng
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UnknownKriodluk/aircrackGUI

[options]
packages = find:
install_requires =
    tkinter
    subprocess
    platform
    os_sys
    re
    time
